welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:93: error: expected class or object definition
def growFlowers(){
^FlowerCase:97: error: Unmatched closing brace '}' ignored here
}
^